# THINCS

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/core/: address.rs  fors.rs  hypertree.rs  mod.rs  scheme.rs  wots.rs  xmss.rs
src/cost/: mod.rs  ops.rs  size.rs
src/hash/: mod.rs  sha2.rs  shake.rs
src/params/: collision.rs  constraints.rs  mod.rs  optimizer.rs  security.rs  types.rs
tests/: fuzz_roundtrip.rs  standard_parameters.rs
