[package]
name = "thincs"
version = "0.1.0"
edition = "2024"
description = "THINCS — find optimal stateless hash-based signature schemes"
license = "MIT"

[[bin]]
name = "thincs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
rand = "0.8"
comfy-table = "7"